--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,141 @@
-section.banner{
+/* banner */
+section.banner {
     margin-top: 90px;
 }
+
+.carousel-inner {
+    height: 100%;
+    width: 100%;
+}
+
+.carousel-item img {
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    height: 614.92px;
+}
+
+.carousel-control-prev {
+    /* left: -85px; */
+    /* padding-left: 75px; */
+    display: none;
+    opacity: 0;
+}
+
+.carousel-control-next {
+    /* right:-85px; */
+    /* padding-right: 75px; */
+    display: none;
+    opacity: 0;
+}
+
+.carousel:hover .carousel-control-prev,
+.carousel:hover .carousel-control-next {
+    display: block;
+    opacity: 1;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+    width: 10%;
+}
+
+.carousel-control-prev:hover {
+    background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+        -270deg,
+        rgba(255, 255, 255, 0.5) 0%,
+        rgba(252, 0, 0, 0) 100%
+    );
+}
+.carousel-control-next:hover {
+    background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+        270deg,
+        rgba(255, 255, 255, 0.5) 0%,
+        rgba(252, 0, 0, 0) 100%
+    );
+}
+
+.carousel-control-prev.fade-out,
+.carousel-control-next.fade-out {
+    opacity: 0.5;
+}
+/* banner end  */
+
+/* provider */
+
+.section-title h2 {
+    margin-bottom: 60px;
+    text-align: center;
+    color: #e45f2b;
+}
+
+.testimonials .testimonial-item {
+    box-sizing: content-box;
+    margin-left: 40px;
+    margin-bottom: 50px;
+    box-shadow: 0px 0 20px rgba(1, 41, 112, 0.1);
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    transition: 0.3s;
+    overflow: hidden;
+}
+
+.testimonials .testimonial-item .testimonial-img {
+    width: 300px;
+    height: 180px;
+    object-fit: contain;
+    object-position: center;
+}
+
+.testimonials .swiper-pagination {
+    margin-top: 20px;
+    position: relative;
+    padding-left: 30px;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    opacity: 1;
+    border: 1px solid #e45f2b;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+    background-color: #e45f2b;
+}
+
+@media (max-width: 1199px) {
+    .testimonials .swiper-slide-active {
+        opacity: 1;
+    }
+
+    .testimonials .swiper-pagination {
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .testimonials .swiper-slide-next {
+        opacity: 1;
+        transform: scale(1.12);
+    }
+}
+
+@media (max-width: 768px) {
+    .testimonials .testimonial-item {
+        margin-left: 0px;
+    }
+    .testimonials .swiper-pagination {
+        padding-left: 10px;
+    }
+}
+
+/* provider end */
+
