--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -21,7 +21,7 @@
     <body>
         <div class="container">
             <div class="row justify-content-center mt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="text-center logo">
                         <img src="/public/images/LOGO.png" alt="" />
                         <p class="mt-3">Hệ thống quản trị - khogiamgia.xyz</p>
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-5">
+                <div class="col-md-5">
                     <form class="form-login">
                         <div class="form-group mt-4">
                             <label for="username">Tài khoản</label>
@@ -66,5 +66,14 @@
                 </div>
             </div>
         </div>
+        <!-- BEGIN: COPYRIGHT -->
+        <footer class="footer">
+            <div class="container">
+                <p class="text-center">
+                    NHÓM 1 - VŨ QUANG HUY, LÒ TIẾN ANH -  EAUT  &copy; 2024 khogiamgia.xyz. All rights reserved.
+                </p>
+            </div>
+        </footer>
+        <!-- END: COPYRIGHT -->
     </body>
 </html>
