--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -1,57 +1,77 @@
 .breadcrumb-item {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .banner-news img {
-    width: 100%;
+  width: 100%;
 }
 
 .post-title a {
-    text-decoration: none;
-    color: #1e3769;
+  text-decoration: none;
+  color: #1e3769;
 }
 
 .custom-hr {
-    margin-top: 80px;
-    margin-bottom: 50px;
+  margin-top: 80px;
+  margin-bottom: 50px;
 }
 
 .pagination {
-    border: none;
+  border: none;
 }
 
 .page-item .page-link {
-    color: rgb(46, 44, 44);
-    border: none;
+  color: rgb(46, 44, 44);
+  border: none;
 }
 
 .page-item.disabled .page-link {
-    border: none;
+  border: none;
 }
 .page-item.active span.page-link {
-    color: #fff;
-    background-color: #1e3769;
-    border-radius: 4px;
-    box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  color: #fff;
+  background-color: #1e3769;
+  border-radius: 4px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
 }
 .page-item.active span.page-link:active {
-    background-color: #1e3769;
-    color: #fff;
+  background-color: #1e3769;
+  color: #fff;
 }
 
 .page-item span.page-link:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .page-item disabled {
-    background: #fff;
+  background: #fff;
 }
 
 .recent-blog-posts .post-box:hover .post-title a {
-    color: #4154f1;
+  color: #4154f1;
 }
 
 .navbar-brand {
-    font-size: 28px !important;
-    font-weight: bold;
+  font-size: 28px !important;
+  font-weight: bold;
+}
+
+.section-post.btn-supplier {
+  text-decoration: none;
+}
+
+.pagination .page-item .page-link {
+  border: none;
+  background-color: #f8f9fa;
+  color: #424242;
+}
+
+.pagination .page-item.active .page-link {
+  background-color: #1266f1;
+  color: #fff;
+  border-radius: 4px;
+}
+
+.pagination .page-item .page-link:hover {
+  background-color: #e7e7ea;
 }
