--- a/public/css/admin/posts.css
+++ b/public/css/admin/posts.css
@@ -169,6 +169,38 @@
   text-align: center;
   margin: auto;
 }
+
+.dropzone .dz-preview .dz-image {
+  border-radius: 0px;
+  width: auto;
+  height: auto;
+}
+
+.dropzone .dz-preview .dz-image img {
+  width: 100%;
+}
+
 .dropzone {
-  padding: 20px 0px;
+  padding: 0px 0px;
+}
+
+.dropzone .dz-preview {
+  margin: 0px;
+}
+
+.dropzone-container {
+  position: relative;
+}
+
+#deleteImageBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: none;
+  color: fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  z-index: 1111;
+  border-radius: 6px;
 }
