--- a/public/css/promotion-news.css
+++ b/public/css/promotion-news.css
@@ -14,6 +14,12 @@
   background-color: #e7e7ea;
 }
 
+.pagination .page-item.disabled .page-link {
+  border: none;
+  background-color: #f8f9fa;
+  color: #9b9b9b;
+}
+
 .btn-supplier {
   text-decoration: none;
   color: #e45f2b;
