--- a/public/css/admin/posts.css
+++ b/public/css/admin/posts.css
@@ -21,6 +21,7 @@
 .item_image {
   height: 68px;
   width: 54px;
+  object-fit: contain;
 }
 
 .wrap_dasboard {
@@ -133,7 +134,7 @@
 .wrap_img_detail img {
   width: 100%;
   height: 180px;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
   margin: 0 auto;
 }
