--- a/public/css/admin/suppliers.css
+++ b/public/css/admin/suppliers.css
@@ -8,19 +8,21 @@
   width: 7.5%;
   text-align: center;
 }
-.table_item_title {
+
+.table_item_link {
   text-align: center;
-  word-wrap: break-word;
+  width: 15%;
 }
 
 .table_item_image {
   text-align: center;
-  width: 11%;
+  width: 10%;
 }
 
 .item_image {
   height: 68px;
   width: 54px;
+  object-fit: contain;
 }
 
 .wrap_dasboard {
@@ -32,7 +34,7 @@
   font-size: 24px;
 }
 
-.delete-post {
+.delete-supplier {
   color: #dc3545;
   font-size: 24px;
 }
@@ -45,6 +47,8 @@
   margin-top: 6px;
   padding-top: 21px;
   padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 6px;
 }
 
 #item_head_table {
@@ -93,6 +97,12 @@
   color: #424242;
 }
 
+.pagination .page-item.disabled .page-link {
+  border: none;
+  background-color: #f8f9fa;
+  color: #9b9b9b;
+}
+
 .pagination .page-item.active .page-link {
   background-color: #1266f1;
   color: #fff;
@@ -103,14 +113,9 @@
   background-color: #e7e7ea;
 }
 
-#searchBtn {
-  margin-left: 2px;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-}
-
 #searchBtn:hover {
-  color: #1266f1;
+  color: #000000;
+  background-color: #ffff;
 }
 
 .input-group {
@@ -130,7 +135,7 @@
 .wrap_img_detail img {
   width: 100%;
   height: 180px;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
   margin: 0 auto;
 }
@@ -154,21 +159,69 @@
   border-radius: 6px;
 }
 
-.status-inactive {
-  background-color: #e9ecef;
-  color: #343a40;
-  width: 20%;
-  text-align: center;
-  margin: auto;
+.dropzone .dz-preview .dz-image {
+  border-radius: 0px;
+  width: auto;
+  height: auto;
 }
 
-.status-active {
-  background-color: #c7f5d9;
-  color: #174c2c;
-  width: 40%;
-  text-align: center;
-  margin: auto;
+.dropzone .dz-preview .dz-image img {
+  width: 100%;
 }
+
 .dropzone {
-  padding: 20px 0px;
+  padding: 0px 0px;
+}
+
+.dropzone .dz-preview {
+  margin: 0px;
+}
+
+.dropzone-container {
+  position: relative;
+}
+
+.container_search {
+  position: relative;
+}
+
+#searchBtn {
+  position: absolute;
+  color: #000000;
+  right: 6px;
+  z-index: 11111;
+  top: 1px;
+  border: none;
+}
+
+.input-search {
+  border-radius: 6px !important;
+  background-color: #ffffff;
+}
+
+#deleteImageBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: none;
+  color: fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  z-index: 1111;
+  border-radius: 6px;
+}
+
+.toast_create,
+.toast_update {
+  top: 5%;
+}
+
+.back_home {
+  color: #2597ff;
+  font-weight: 700;
+}
+
+.bi-arrow-left::before {
+  font-weight: bold !important;
 }
