--- a/public/css/general.css
+++ b/public/css/general.css
@@ -45,8 +45,18 @@ h4 {
 }
 
 .btn-xem-them:hover {
+    background-color: rgb(255, 48, 2) !important;
+    color: #fff !important;
+}
+
+.btn-xem-them:active {
+    background-color: rgb(255, 74, 2) !important;
+    color: #fff !important;
+}
+
+.btn-xem-them:focus {
     background-color: rgb(255, 74, 2);
-    color: #fff;
+    color: #fff !important;
 }
 
 /* // disable button */
