Add logUserAccess() function call and update general.css and statistic.css

--- a/public/css/admin/general.css
+++ b/public/css/admin/general.css
@@ -3,6 +3,7 @@
     padding: 40px;
 }
 
+
 .card {
     box-shadow: 0px 0px 6px 0px rgba(24, 144, 255, 0.25);
 }
@@ -43,4 +44,9 @@
 }
 .round-icon i::before {
     vertical-align: middle;
+}
+
+.chart{
+    width: 300px;
+    height: 300px;
 }
