--- a/public/css/admin/statistic.css
+++ b/public/css/admin/statistic.css
@@ -1,19 +1,32 @@
 .statistics-container:first-child {
     margin-top: 65px;
-  }
-.statistics-container{
+}
+.statistics-container {
     margin-top: 20px;
 }
-  
-.statistics b{
+
+.statistics b {
     margin: 5px 0;
     border-bottom: 1px solid #ddd;
 }
-.statistics a{
+.statistics a {
     color: #0088cc;
     text-decoration: none;
 }
-.statistics a:hover{
+.statistics a:hover {
     color: #005580;
     text-decoration: underline;
+    cursor: pointer;
+}
+
+/* class disable a */
+.disable {
+    color: #999 !important;
+    cursor: default !important;
+    text-decoration: none !important;
+}
+.disable:hover {
+    color: #999;
+    text-decoration: none !important;
+    cursor: default !important;
 }
