--- a/public/css/admin/banners.css
+++ b/public/css/admin/banners.css
@@ -240,3 +240,11 @@
 .bi-arrow-left::before {
   font-weight: bold !important;
 }
+
+.wrapContent {
+  background-color: #f0f2f5;
+}
+
+.wrap_detail {
+  background-color: #ffffff;
+}
