--- a/public/css/promotion.css
+++ b/public/css/promotion.css
@@ -80,7 +80,7 @@
 }
 
 .badge-promotion {
-  /* margin-top: 15px; */
+  margin-top: 15px;
   text-align: center;
   font-size: 12px;
   color: #0a3622;
