--- a/public/css/admin/vouchers.css
+++ b/public/css/admin/vouchers.css
@@ -126,6 +126,10 @@
   background-color: #fff !important;
 }
 
+.voucherIdHidden {
+  color: #bdb9b9;
+}
+
 .wrap_img_detail {
   max-width: 100%;
   text-align: center;
