--- a/public/css/promotion-news.css
+++ b/public/css/promotion-news.css
@@ -45,9 +45,23 @@
 
 .image-banner {
   width: 100%;
-  height: 330px;
+  max-height: 330px;
   object-fit: cover;
   object-position: center;
+}
+
+.section-banner {
+  padding: 35px 0px;
+}
+
+@media (max-width: 768px) {
+  .section-banner {
+    padding: 0px 0px;
+  }
+  .btn-supplier {
+    max-height: 55px;
+    font-size: 12px;
+  }
 }
 
 .titlePost {
